Reorganize categories a bit.

--- a/index.html
+++ b/index.html
@@ -475,8 +475,92 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="http://twig.sensiolabs.org/">Symfony Twig templates</a></span>
+                    <span itemprop="name"><a href="http://twig.sensiolabs.org/">Symfony Twig templates</a></span>…
                     <meta itemprop="ratingValue" content="4">
+                </dd>
+
+                <dt class="list__header">Methodology &amp; Collaboration</dt>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://www.scrum.org/">Scrum</a></span>,
+                    <meta itemprop="ratingValue" content="4">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://global.toyota/en/company/vision-and-philosophy/production-system/">Kanban</a></span>,
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://37signals.com/remote">remote work</a></span>,
+                    <meta itemprop="ratingValue" content="5">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://git-scm.com/">Git</a></span>…
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+
+                <dt class="list__header">Quality Assurance</dt>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://eslint.org/">ESLint</a></span>,
+                    <meta itemprop="ratingValue" content="4">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://stylelint.io/">stylelint</a></span>,
+                    <meta itemprop="ratingValue" content="4">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://www.typescriptlang.org/">TypeScript</a></span>,
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://codeception.com/">Codeception</a></span>,
+                    <meta itemprop="ratingValue" content="2">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://travis-ci.com/">Travis‑CI</a></span>,
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <span itemprop="name"><a href="https://bitbucket.org/product/features/pipelines">Bitbucket Pipelines</a></span>…
+                    <meta itemprop="ratingValue" content="2">
                 </dd>
 
                 <dt class="list__header">Automation tools</dt>
@@ -486,6 +570,14 @@
                     itemscope itemtype="http://schema.org/Rating"
                 >
                     <abbr title="Node.js Package Manager" itemprop="name"><a href="https://npmjs.com/">npm</a></abbr>,
+                    <meta itemprop="ratingValue" content="3">
+                </dd>
+                <dd
+                    class="list__item"
+                    itemprop="knowsAbout"
+                    itemscope itemtype="http://schema.org/Rating"
+                >
+                    <abbr itemprop="name"><a href="https://yarnpkg.com/">yarn</a></abbr>,
                     <meta itemprop="ratingValue" content="3">
                 </dd>
                 <dd
@@ -517,90 +609,6 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://eslint.org/">ESLint</a></span>,
-                    <meta itemprop="ratingValue" content="4">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://stylelint.io/">stylelint</a></span>,
-                    <meta itemprop="ratingValue" content="4">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://www.typescriptlang.org/">TypeScript</a></span>,
-                    <meta itemprop="ratingValue" content="3">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://codeception.com/">Codeception</a></span>
-                    <meta itemprop="ratingValue" content="2">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://travis-ci.com/">Travis‑CI</a></span>
-                    <meta itemprop="ratingValue" content="3">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://bitbucket.org/product/features/pipelines">Bitbucket Pipelines</a></span>
-                    <meta itemprop="ratingValue" content="2">
-                </dd>
-
-                <dt class="list__header">Methodology</dt>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://www.scrum.org/">Scrum</a></span>,
-                    <meta itemprop="ratingValue" content="4">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://global.toyota/en/company/vision-and-philosophy/production-system/">Kanban</a></span>,
-                    <meta itemprop="ratingValue" content="3">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://37signals.com/remote">remote work</a></span>
-                    <meta itemprop="ratingValue" content="5">
-                </dd>
-
-                <dt class="list__header">Collaboration</dt>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
-                    <span itemprop="name"><a href="https://git-scm.com/">Git</a></span>,
-                    <meta itemprop="ratingValue" content="3">
-                </dd>
-                <dd
-                    class="list__item"
-                    itemprop="knowsAbout"
-                    itemscope itemtype="http://schema.org/Rating"
-                >
                     <abbr title="Knyle Style Sheets" itemprop="name"><a href="http://warpspire.com/kss/"><abbr title="Knyle Style Sheets">KSS</abbr></a></abbr>,
                     <meta itemprop="ratingValue" content="4">
                 </dd>
@@ -617,7 +625,7 @@
                     itemprop="knowsAbout"
                     itemscope itemtype="http://schema.org/Rating"
                 >
-                    <span itemprop="name"><a href="https://phpdoc.org">phpDocumentor</a></span>
+                    <span itemprop="name"><a href="https://phpdoc.org">phpDocumentor</a></span>…
                     <meta itemprop="ratingValue" content="4">
                 </dd>
             </dl>
