Add ODT and PDF files.

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </div>
 
             <p>
-                You can find extensive information about <a rel="me" itemprop="url" href="https://linkedin.com/in/fabienbasmaison">my professional background</a> on LinkedIn or other <a rel="me" itemprop="url" href="https://arkhi.org/#networks-professional">services I use</a> along with a more <a href="http://arkhi.org/feed/juji">serendipitous gathering of things</a>.
+                You can find extensive information about <a rel="me" itemprop="url" href="https://linkedin.com/in/fabienbasmaison">my professional background</a> on LinkedIn or other <a rel="me" itemprop="url" href="https://arkhi.org/#networks-professional">services I use</a> along with a more <a href="http://arkhi.org/feed/juji">serendipitous gathering of things</a>. You can also <a href="./cv-fabien-basmaison-en.pdf">download this PDF Resume</a>.
             </p>
         </section>
 
