Add project zenith-etn.com.

--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@
                 background-image: url(img/screenshots/elson.fr.jpg);
             }
 
+            .illustration--zenith {
+                background-image: url(img/screenshots/zenith-etn.com.jpg);
+            }
+
             .project__thumbnail {
                 display: block;
                 max-width: 100%;
@@ -664,6 +668,23 @@
 
         <section class="projects">
             <h2 class="container">Some projects I worked on</h2>
+
+            <div class="container projects__project">
+                <h3 class="project__title" id="zenith-etn.com">zenith-etn.com</h3>
+
+                <a class="project__illustration illustration--zenith" href="https://www.zenith-etn.com/">
+                    <img class="project__thumbnail" src="img/thumbnails/zenith-etn.com.png" width="960" height="240" alt="">
+                </a>
+
+                <div class="project__description">
+                    <p>
+                        2019: The aim of <a href="https://www.zenith-etn.com/"><abbr title="ZEbrafish Neuroscience International Training Hub">Zenith</abbr></a> is to train a new generation of neuroscientists in cutting-edge approaches that bridge biology, physics, and mathematics to uncover the mysteries of brain formation and function.
+                    </p>
+                    <p>
+                        This is a collaboration with <abbr>Zenith</abbr> for the content and directions, and <a href="https://headquarter.paris/">Headquarter</a> for graphic design.
+                    </p>
+                </div>
+            </div>
 
             <div class="container projects__project">
                 <h3 class="project__title" id="elson.fr">elson.fr</h3>
