--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         </section>
 
         <section class="projects">
-            <h2 class="container">Some projects I worked on</h2>
+            <h2 class="container">Selected works</h2>
 
             <div class="container projects__project">
                 <h3 class="project__title" id="zenith-etn.com">zenith-etn.com</h3>
@@ -678,7 +678,7 @@
 
                 <div class="project__description">
                     <p>
-                        2019: The aim of <a href="https://www.zenith-etn.com/"><abbr title="ZEbrafish Neuroscience International Training Hub">Zenith</abbr></a> is to train a new generation of neuroscientists in cutting-edge approaches that bridge biology, physics, and mathematics to uncover the mysteries of brain formation and function.
+                        <strong>2019</strong>: The aim of <a href="https://www.zenith-etn.com/"><abbr title="ZEbrafish Neuroscience International Training Hub">Zenith</abbr></a> is to train a new generation of neuroscientists in cutting-edge approaches that bridge biology, physics, and mathematics to uncover the mysteries of brain formation and function.
                     </p>
                     <p>
                         This is a collaboration with <abbr>Zenith</abbr> for the content and directions, and <a href="https://headquarter.paris/">Headquarter</a> for graphic design.
@@ -695,7 +695,7 @@
 
                 <div class="project__description">
                     <p>
-                        2018: <a href="https://www.elson.fr/">elson</a>’s goal is to assist podcast users to find what they will like while supporting the producers of podcasts.
+                        <strong>2018</strong>: <a href="https://www.elson.fr/">elson</a>’s goal is to assist podcast users to find what they will like while supporting the producers of podcasts.
                     </p>
 
                     <p>
@@ -717,7 +717,7 @@
 
                 <div class="project__description">
                     <p>
-                        2017: <a href="https://wyartlab.org/">wyartlab.org</a> is a collaboration with <a href="http://cargocollective.com/flagship">Flasghsip</a> in Shanghai for the graphic design. The research lab shows its members and (cool) researches.
+                        <strong>2017</strong>: <a href="https://wyartlab.org/">wyartlab.org</a> is a collaboration with <a href="http://cargocollective.com/flagship">Flasghsip</a> in Shanghai for the graphic design. The research lab shows its members and (cool) researches.
                     </p>
                 </div>
             </div>
@@ -731,7 +731,7 @@
 
                 <div class="project__description">
                     <p>
-                        2015~2016: <a href="http://juwai.com/">http://juwai.com/</a> is the main website of a few, dedicated to Chinese consumers and customers throughout the World.
+                        <strong>2015~2016</strong>: <a href="http://juwai.com/">http://juwai.com/</a> is the main website of a few, dedicated to Chinese consumers and customers throughout the World.
                     </p>
                     <p>
                         I worked on almost every frontend related project, from the <em>administrative side of applications</em>, to a <em>global redesign of <a href="http://www.juwai.com">www.juwai.com</a></em> that started in December 2015.
@@ -751,7 +751,7 @@
 
                 <div class="project__description">
                     <p>
-                        2012~2014: (<abbr>NSFW</abbr>) On <a href="http://kaufmich.com/">http://kaufmich.com/</a>, my biggest challenge was to clean legacy code while adding more features to the website. Considering the amount of people and code added through the years, it was <i>quite some fun</i>!
+                        <strong>2012~2014</strong>: (<abbr>NSFW</abbr>) On <a href="http://kaufmich.com/">http://kaufmich.com/</a>, my biggest challenge was to clean legacy code while adding more features to the website. Considering the amount of people and code added through the years, it was <i>quite some fun</i>!
                     </p>
 
                     <p>
@@ -778,7 +778,7 @@
 
                 <div class="project__description">
                     <p>
-                        2010 ~&nbsp;2012: (<abbr title="Not Safe For Work">NSFW</abbr>) <a href="http://poppen.de/">http://poppen.de/</a> is part of what my previous company is doing. There’s more than 3 millions registered users which makes it a very interesting challenge as any change made has a real impact.
+                        <strong>2010 ~&nbsp;2012</strong>: (<abbr title="Not Safe For Work">NSFW</abbr>) <a href="http://poppen.de/">http://poppen.de/</a> is part of what my previous company is doing. There’s more than 3 millions registered users which makes it a very interesting challenge as any change made has a real impact.
                     </p>
                 </div>
             </div>
@@ -792,7 +792,7 @@
 
                 <div class="project__description">
                     <p>
-                        2011: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">Skyview</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
+                        <strong>2011</strong>: <a href="http://archives.arkhi.org/projects/sky-view/sample.html">Skyview</a> was a command from a friend. The concept was <i>simplicity</i> and <i>fullscreen</i>.
                     </p>
                 </div>
             </div>
@@ -806,7 +806,7 @@
 
                 <div class="project__description">
                     <p>
-                        2010: <a href="http://china-europa-forum.net/">http://china-europa-forum.net/</a> is an initiative to push for exchange and support between Europe and China, on a lot of different topics. I coded the frontend and CMS of the site at the time; the actual version saw some HTML content added by a third part which can break the layout.
+                        <strong>2010</strong>: <a href="http://china-europa-forum.net/">http://china-europa-forum.net/</a> is an initiative to push for exchange and support between Europe and China, on a lot of different topics. I coded the frontend and CMS of the site at the time; the actual version saw some HTML content added by a third part which can break the layout.
                     </p>
                 </div>
             </div>
@@ -820,7 +820,7 @@
 
                 <div class="project__description">
                     <p>
-                        2010: <a href="http://archives.arkhi.org/projects/flipmood.com/">Flipmood</a> was a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
+                        <strong>2010</strong>: <a href="http://archives.arkhi.org/projects/flipmood.com/">Flipmood</a> was a website for friends that wanted to promote their creative works. Working with these two was amazingly insightful about what can be expected from good graphic designers.
                     </p>
                 </div>
             </div>
@@ -834,7 +834,7 @@
 
                 <div class="project__description">
                     <p>
-                        2009: <a href="https://archives.arkhi.org/projects/bodybag.me/">Bodybag</a> was a website for two Dutch architects in Shanghai who started their fashion design company.
+                        <strong>2009</strong>: <a href="https://archives.arkhi.org/projects/bodybag.me/">Bodybag</a> was a website for two Dutch architects in Shanghai who started their fashion design company.
                     </p>
                 </div>
             </div>
@@ -848,7 +848,7 @@
 
                 <div class="project__description">
                     <p>
-                        2006 ~&nbsp;2009: As part of <a href="https://paris-web.fr/">Paris Web</a> team, I participated to the organization and integration of the related websites. The whole process was fun! Helping speakers before, during and after the event was one of the most rewarding experiences ever. It was also a nice introduction to working remotely, with people in France, New‑Caledonia and China.
+                        <strong>2006 ~&nbsp;2009</strong>: As part of <a href="https://paris-web.fr/">Paris Web</a> team, I participated to the organization and integration of the related websites. The whole process was fun! Helping speakers before, during and after the event was one of the most rewarding experiences ever. It was also a nice introduction to working remotely, with people in France, New‑Caledonia and China.
                     </p>
                 </div>
             </div>
@@ -862,7 +862,7 @@
 
                 <div class="project__description">
                     <p>
-                        2003 ~&nbsp;2013: <a href="http://www.pompage.net/about">http://www.pompage.net/about</a> I didn’t design the website but I was maintaining it on my spare time, along with translating, proof‑reading and publishing. Being part of this team for 10 years has been awesome and set the path I am still following to this day.
+                        <strong>2003 ~&nbsp;2013</strong>: <a href="http://www.pompage.net/about">http://www.pompage.net/about</a> I didn’t design the website but I was maintaining it on my spare time, along with translating, proof‑reading and publishing. Being part of this team for 10 years has been awesome and set the path I am still following to this day.
                     </p>
                 </div>
             </div>
