Add titles to headers, for the Minimap.

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     <body class="bam" itemscope itemtype="http://schema.org/Person">
         <main role="main">
             <section class="container">
-                <h1 class="sr-only">Fabien Basmaison; Résumé</h1>
+                <h1 id="resume" class="sr-only">Fabien Basmaison; Résumé</h1>
 
                 <p>
                     Hello, I’m <span itemprop="name" lang="fr">Fabien Basmaison</span>!
@@ -397,7 +397,7 @@
             </section>
 
             <section class="container">
-                <h2>What I like to do</h2>
+                <h2 id="what">What I like to do</h2>
 
                 <ul>
                     <li>Learn and find solutions to problems.</li>
@@ -409,7 +409,7 @@
             </section>
 
             <section class="container">
-                <h2>Who I like to work with</h2>
+                <h2 id="who">Who I like to work with</h2>
 
                 <ul>
                     <li>Curious people who want to challenge requirements.</li>
@@ -419,7 +419,7 @@
             </section>
 
             <section class="container">
-                <h2>Skill set</h2>
+                <h2 id="skills">Skill set</h2>
 
                 <dl class="list--inline">
                     <dt class="list__header">Frontend</dt>
@@ -657,7 +657,7 @@
             </section>
 
             <section class="container">
-                <h2>Languages</h2>
+                <h2 id="languages">Languages</h2>
 
                 <ul>
                     <li
@@ -688,7 +688,7 @@
             </section>
 
             <section class="projects">
-                <h2 class="container">Selected works</h2>
+                <h2 id="selected-works" class="container">Selected works</h2>
 
                 <div class="container projects__project">
                     <h3 class="project__title" id="zenith-etn.com">zenith-etn.com</h3>
