Add a quick description.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <meta name="keywords" content="web, developer, frontend, resume, front-end" />
         <meta name="author" content="Fabien Basmaison">
+        <meta name="description" content="Fabien Basmaison, French frontend developer working with agile and aiming for quality, accessibility and tight collaboration.">
 
         <meta name="viewport" content="width=device-width">
 
